--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,6 +97,7 @@
         android:ems="10"
         android:hint="@string/ethoras"
         android:inputType="number"
+        android:text="@string/ethoras"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rgCargo" />
 
@@ -108,7 +109,8 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/etfaltas"
-        android:inputType="textPersonName|number"
+        android:inputType="number"
+        android:text="@string/etfaltas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etHoras" />
 
@@ -121,6 +123,7 @@
         android:ems="10"
         android:hint="@string/etfilhos"
         android:inputType="number"
+        android:text="@string/etfaltas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etFaltas" />
 
